scripts/kube/httpserver_v0.2.service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  labels:
    env: dev
spec:
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8000
